WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131458
WK2: Dictated words disappear after being inserted
https://bugs.webkit.org/show_bug.cgi?id=131458
Summary
WK2: Dictated words disappear after being inserted
Enrica Casucci
Reported
2014-04-09 14:57:47 PDT
This happens in any page with an input field. <
rdar://problem/16395011
>
Attachments
Patch
(1.72 KB, patch)
2014-04-09 15:03 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-04-09 15:03:02 PDT
Created
attachment 228988
[details]
Patch
Enrica Casucci
Comment 2
2014-04-09 15:13:15 PDT
Committed revision 167038.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug