WK2: Dictated words disappear after being inserted. https://bugs.webkit.org/show_bug.cgi?id=131458 <rdar://problem/16395011>

Reviewed by Benjamin Poulain.

The dictation engine treats selected text as text to be
removed. We need to ensure that the range selected to insert the
new text isn't reflected in the UI process until we are done
inserting the text.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::replaceDictatedText):



Canonical link: https://commits.webkit.org/149520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167038 268f45cc-cd09-0410-ab3c-d52691b4dbfc